# mce_v2

./: CMakeLists.txt  README.md
include/: Assembly.h  Element.h  GUI.h  Gauss.h  Mesh.h  Stress.h  Viewer.h
src/: GUI.cpp  Viewer.cpp  main.cpp
src/FEM/: Assembly.cpp  Element.cpp  Gauss.cpp  Mesh.cpp  Stress.cpp
